Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-689

Python binding does not expose transport error details

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.8
    • proton-0.8
    • python-binding
    • None

    Description

      The proton event model defines a TRANSPORT_ERROR event, but when the event occurs there is no way to extract the error code nor the error text from the transport when using the python binding.

      The connection class exports the error code via the 'error' property. I'd like to see an 'error' property added to the Transport class, and an 'error_text' property to both the Transport and the Connection for completeness.

      Attachments

        Activity

          People

            rhs Rafael H. Schloming
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: