PROTON-689: added a condition to the transport along with bindings to expose it

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1627444 13f79535-47bb-0310-9956-ffa450edef68